--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@kinde-oss/kinde-auth-nextjs": "2.4.6",
+    "@prisma/client": "^6.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "1.1.1",
@@ -36,6 +37,7 @@
     "postcss": "8",
     "prettier": "3.4.2",
     "prettier-plugin-tailwindcss": "0.6.9",
+    "prisma": "^6.1.0",
     "tailwindcss": "3.4.1",
     "typescript": "5"
   }
