--- a/package.json
+++ b/package.json
@@ -10,20 +10,23 @@
     "prettier": "prettier --write */**/*.{js,jsx,json,ts,tsx,scss,css,md}"
   },
   "dependencies": {
+    "@conform-to/react": "1.2.2",
+    "@conform-to/zod": "1.2.2",
     "@kinde-oss/kinde-auth-nextjs": "2.4.6",
-    "@prisma/client": "^6.1.0",
-    "@radix-ui/react-dropdown-menu": "^2.1.4",
-    "@radix-ui/react-label": "^2.1.1",
+    "@prisma/client": "6.1.0",
+    "@radix-ui/react-dropdown-menu": "2.1.4",
+    "@radix-ui/react-label": "2.1.1",
     "@radix-ui/react-slot": "1.1.1",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "lucide-react": "0.468.0",
     "next": "15.1.0",
-    "next-themes": "^0.4.4",
+    "next-themes": "0.4.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "tailwind-merge": "2.5.5",
-    "tailwindcss-animate": "1.0.7"
+    "tailwindcss-animate": "1.0.7",
+    "zod": "3.24.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "3",
@@ -37,7 +40,7 @@
     "postcss": "8",
     "prettier": "3.4.2",
     "prettier-plugin-tailwindcss": "0.6.9",
-    "prisma": "^6.1.0",
+    "prisma": "6.1.0",
     "tailwindcss": "3.4.1",
     "typescript": "5"
   }
