--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ KINDE_POST_LOGOUT_REDIRECT_URL=http://localhost:3000
 KINDE_POST_LOGIN_REDIRECT_URL=
 DATABASE_URL=
 DIRECT_URL=
+UPLOADTHING_SECRET=
+UPLOADTHING_APP_ID=
+UPLOADTHING_TOKEN=
