--- a/package.json
+++ b/package.json
@@ -17,19 +17,24 @@
     "@radix-ui/react-dropdown-menu": "2.1.4",
     "@radix-ui/react-label": "2.1.1",
     "@radix-ui/react-slot": "1.1.1",
+    "@uploadthing/react": "^7.1.3",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "lucide-react": "0.468.0",
     "next": "15.1.0",
-    "next-themes": "0.4.4",
+    "next-themes": "^0.4.4",
+    "novel": "^0.5.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "sonner": "^1.7.1",
     "tailwind-merge": "2.5.5",
     "tailwindcss-animate": "1.0.7",
+    "uploadthing": "^7.4.1",
     "zod": "3.24.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "3",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/node": "20",
     "@types/react": "19",
     "@types/react-dom": "19",
