--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "novel": "^0.5.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-slugify": "^4.0.1",
     "sonner": "^1.7.1",
     "tailwind-merge": "2.5.5",
     "tailwindcss-animate": "1.0.7",
