--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@radix-ui/react-dropdown-menu": "2.1.4",
     "@radix-ui/react-label": "2.1.1",
     "@radix-ui/react-slot": "1.1.1",
-    "@uploadthing/react": "^7.1.3",
+    "@tiptap/html": "2.11.2",
+    "@uploadthing/react": "7.1.3",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "lucide-react": "0.468.0",
