--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-slugify": "^4.0.1",
-    "sonner": "^1.7.1",
+    "sonner": "1.7.1",
+    "stripe": "17.6.0",
     "tailwind-merge": "2.5.5",
     "tailwindcss-animate": "1.0.7",
-    "uploadthing": "^7.4.1",
+    "uploadthing": "7.4.1",
     "zod": "3.24.1"
   },
   "devDependencies": {
