--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ DIRECT_URL=
 UPLOADTHING_SECRET=
 UPLOADTHING_APP_ID=
 UPLOADTHING_TOKEN=
+TRIPE_SECRET_KEY=
+STRIPE_PRICE_ID=
+STRIPE_WEBHOOK_SECRET=
